tests/subtyping/ambiguous-type-as-bottom/ill-typed/inr.stella
language core;
extend with
  #ambiguous-type-as-bottom,
  #sum-types,
  #bottom-type;

fn main(a : Nat) -> Nat + Bot {
  return (fn (b : Nat) {
    return inr(0)
  })(0)
}
